--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 server.port=9000
 spring.application.name=ribbon-consumer
 
-eureka.client.service-url.default-zone=http://localhost:8761/eureka/
+eureka.client.service-url.default-zone=http://10.57.30.47:8761/eureka/
 
 
